Tue Jan 19 10:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSScrollView.m: Tidied ([-tile]) and other stuff to do
	with resizing - removed some redundant code.
	* Source/NSSplitView.m: ([-adjustSubviews]) complete rewrite in
	an attempt to get things working as specified in documentation.
	Subviews are now scaled proportionately.
	* Source/NSBrowser.m: ([-selectedRowInColumn:]) implemented as
	suggested by Dirk Olmes.
	* Headers/AppKit/NSBrowser.h: ditto
	* Source/NSView.m: Raise exception if supplied with illegal
	bounds size (reported by Benhur-de-Oliveira.Stein@imag.fr)
	* Source/NSControl.m: Corrected ([-sendActionon:]) as
	suggested by Benhur-de-Oliveira.Stein@imag.fr
	* Source/NSClipView.m: General tidying and fix code to constrain
	the scroll point.  Get everything to work correctly.

Mon Jan 18  5:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSColor.m: Fixed error in decoding color from defaults
	string - was only reading the first (red) color component.

Fri Jan 15 10:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPasteboard.m: Removed unused (and erroneous) header.
	* Source/GSServicesManager.m: Fixed include path for fast.x as
	suggested by dirk@object-factory.com

Fri Jan 15  9:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Headers/AppKit/NSNibLoading.h: Added interface for new class -
	GSNibContainer - to manage the contents of a nib.
        * Source/NSBundleAdditions.m: Added implementation of GSNibContainer
	and implemented the nib loading methods using it and NSArchiver.
	This should give us a fast and simple alternative to gmodel files
	where portability (and the ability to edit by hand) is not a issue.

Tue Jan 12 11:57:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/NSWindow.m: ([-sendEvent:]) fix cursor update code to set
	cursors as it should.
