@@ -1,3 +1,9 @@
+Thu Jan 21 10:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSColor.m: Fixed initWithCoder: - was decoding an ivar twice
+	(bug report by Benhur-de-Oliveira.Stein@imag.fr) - also used @encode()
+	everywhere.
+
 Tue Jan 19 10:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSScrollView.m: Tidied ([-tile]) and other stuff to do
